# kapture-svn

branch/jabber/: CMakeLists.txt  Kapture.pro  Makefile  event.h  kapturewin.cpp  kapturewin.h  kapturewin.ui  main.cpp  mainframewin.h  mainframewin.ui  mouselabel.cpp  stanza.cpp  tlsHandler.cpp  tlsHandler.h  webcam.cpp  webcam.h  xmlHandler.cpp  xmlHandler.h  xmpp.cpp  xmpp.h
branch/phonon/src/: emoticons.cpp  main.cpp  merror.cpp
branch/phonon/src/client/: contact.cpp  jid.cpp  stanza.cpp  task.cpp
branch/phonon/src/gui/: incomingfiledialog.cpp  kapturewin.ui  mainframewin.ui  mouseprofilestableview.cpp  mouserostertableview.cpp  rostermodel.cpp  xmppconfigdialog.ui
branch/src/: imageconvert.cpp  new.cpp
branch/src/client/: jinglestanza.cpp  presence.cpp  xmlhandler.cpp
branch/src/gui/: crframewin.ui  incomingfiledialog.ui  statusmessagedialog.ui  videowidget.cpp  xmppconfigdialog.cpp
trunk/: CMakeLists.txt  Kapture.pro  Makefile  README  chatwin.cpp  chatwin.h  chatwin.ui  client.cpp  client.h  config.cpp  config.h  contact.cpp  contact.h  emoticons.cpp  event.cpp  event.h  filetransferwidget.cpp  huff_tab.cpp  huff_tab.h  imageConvert.cpp  incomingfiledialog.cpp  incomingfiledialog.ui  jid.cpp  jid.h  kapturewin.cpp  kapturewin.h  kapturewin.ui  main.cpp  mainframewin.cpp  mainframewin.h  merror.cpp  merror.h  message.cpp  message.h  meteoplugin.cpp  meteoplugin.h  mouselabel.cpp  mouselabel.h  mouseprofilestableview.cpp  mouseprofilestableview.h  (+44 more)
trunk/include/: chatwin.h  client.h  contact.h  emoticons.h  incomingfiledialog.h  jinglesession.h  jinglestanza.h  merror.h  mouselabel.h  presence.h  profile.h  rostermodel.h  stanza.h  statusmessagedialog.h  tasks.h  tlshandler.h  vcard.h  videowidget.h  webcam.h  xmpp.h  xmppconfigdialog.h  xmppwin.h
trunk/includes/: client.h  contact.h  event.h  filetransferwidget.h  jid.h  joystick.h  mouseprofilestableview.h  profilemodel.h  rosterdelegate.h  stanza.h  tasks.h  webcam.h  xmlhandler.h  xmppwin.h
trunk/src/: config.cpp  emoticons.cpp  imageConvert.cpp  imageconvert.cpp  joystick.cpp  main.cpp  merror.cpp  profile.cpp  profilemodel.cpp  webcam.cpp  webcampool.cpp  webcampool.h
trunk/src/client/: client.cpp  contact.cpp  event.cpp  jid.cpp  message.cpp  presence.cpp  roster.cpp  stanza.cpp  task.cpp  tasks.cpp  vcard.cpp  xmlhandler.cpp  xmpp.cpp  xmppreg.cpp
trunk/src/gui/: chatwin.cpp  chatwin.ui  filetransferwidget.cpp  kapturewin.cpp  mainframewin.h  mainframewin.ui  rosterdelegate.cpp  rostermodel.cpp  statusmessagedialog.cpp  videowidget.cpp  webcamconfigwidget.cpp  webcamconfigwidget.h  webcamconfigwidget.ui  xmppconfigdialog.cpp  xmppconfigdialog.ui  xmppwin.cpp  xmppwin.ui
trunk/src/net/: socks5.cpp
win32/: CMakeLists.txt  Makefile.old  chatwin.cpp  config.cpp  config.h  imageConvert.cpp  kapturewin.cpp  kapturewin.h  kapturewin.ui  main.cpp  mainframewin.cpp  mouserostertableview.cpp  mouserostertableview.h  profile.h  profilemodel.cpp  rosterModel.cpp  rosterModel.h  stanza.h  tlsHandler.cpp  tlsHandler.h  utils.h  webcam.cpp  xmpp.h  xmppconfigdialog.h  xmppconfigdialog.ui  xmppwin.ui
